Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29400

configure.exe -fully-process doesn't create .vcxproj files

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.2
    • 5.0.0
    • Build System
    • None
    • Windows 8 Pro (64-bit), Visual Studio 2012
    • f9725ce9c2d16474ca47ab6ac25f5df748b12ab5

    Description

      Executing configure.exe -fully-process doesn't create .vcxproj files.
      In following code dictionary.contains("XQMAKESPEC") is empty string, so spec is set to empty string and then VCPROJFILES is set to "no".

      qtbase\tools\configure\configureapp.cpp:

      void Configure::generateMakefiles()
      {
          if (dictionary[ "PROCESS" ] != "no") {
              QString spec = dictionary.contains("XQMAKESPEC") ? dictionary[ "XQMAKESPEC" ] : dictionary[ "QMAKESPEC" ];
      	// TO FIX CHANGE PREVIOUS LINE TO: QString spec = !dictionary[ "XQMAKESPEC" ].isEmpty() ? dictionary[ "XQMAKESPEC" ] : dictionary[ "QMAKESPEC" ];
              if (spec != "win32-msvc.net" && !spec.startsWith("win32-msvc2") && !spec.startsWith(QLatin1String("wince")))
                  dictionary[ "VCPROJFILES" ] = "no";
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            buddenha Oswald Buddenhagen
            krabicezpapundeklu Jarda Flieger
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes