avoid that we accidentally initialize XQMAKESPEC to an empty string

there is plenty of tests which rely on the non-presence of the variable,
rather than it being empty.

Task-number: QTBUG-29400
Change-Id: Ifa8aa68192750521869767e2d4d3796794f4d8f2
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>